--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,6 +23,12 @@ body {
     padding: 10px 20px;
 }
 
+.appname {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 .user-menu {
     position: relative;
     display: inline-block;
@@ -30,6 +36,11 @@ body {
 
 .username {
     cursor: pointer;
+}
+
+.appname, .username {
+    padding: 0.25rem 0.25rem;
+    margin: 0 0.25rem;
 }
 
 .dropdown-content {
@@ -101,7 +112,7 @@ body {
     border-radius: 4px;
 }
 
-.section button {
+.section button, .refreshbutton {
     background-color: #4CAF50;
     color: white;
     padding: 10px 15px;
@@ -109,6 +120,10 @@ body {
     border-radius: 4px;
     cursor: pointer;
     float: right; /* Ensure buttons are right-justified */
+}
+
+.refreshbutton {
+    float: none;
 }
 
 .section button:hover {
@@ -144,4 +159,23 @@ body {
 .timelineitem {
     margin-bottom: 0.50rem;
     width: 95%;
+}
+
+.profiledata {
+    margin: 0 auto;
+}
+
+.profilerow {
+    margin: 0.25rem;
+}
+
+.profilerow label {
+    display: inline-block;
+    width: 10rem;
+    text-align: right;
+    font-weight: bold;
+}
+
+.profilerow.editable label {
+    text-align: left;
 }
