--- a/views/prehome.ejs
+++ b/views/prehome.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="header">FriendPost</div>
+    <div class="header"><a class="appname" href="/" >FriendPost</a></div>
     <div class="container">
         <div class="section">
             <h2>Login</h2>
