Bug fixes and integrations

--- a/views/partials/loggedinheader.ejs
+++ b/views/partials/loggedinheader.ejs
@@ -10,3 +10,9 @@
         </div>
     </div>
 </div>
+<script>
+    window.user = {
+        id: "<%= pagedata.user.id %>",
+        name: "<%= pagedata.user.name %>"
+    };
+</script>
